// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EmptyState /> with Element title/message/action should render correctly 1`] = `
<WithStyles(EmptyState)
  action={<MockAction />}
  icon={<div />}
  message={<MockMessage />}
  title={<MockTitle />}
>
  <EmptyState
    action={<MockAction />}
    classes={
      Object {
        "actionContainer": "HvEmptyState-actionContainer",
        "container": "HvEmptyState-container",
        "containerMessageOnly": "HvEmptyState-containerMessageOnly",
        "iconContainer": "HvEmptyState-iconContainer",
        "messageContainer": "HvEmptyState-messageContainer",
        "root": "HvEmptyState-root",
        "textContainer": "HvEmptyState-textContainer",
        "titleContainer": "HvEmptyState-titleContainer",
      }
    }
    icon={<div />}
    message={<MockMessage />}
    title={<MockTitle />}
  >
    <div
      className="HvEmptyState-root"
    >
      <div
        className="HvEmptyState-container"
      >
        <div
          className="HvEmptyState-iconContainer"
        >
          <div />
        </div>
        <div
          className="HvEmptyState-textContainer"
        >
          <WithStyles(ForwardRef)
            className="HvEmptyState-titleContainer"
            component="div"
            variant="xxsTitle"
          >
            <ForwardRef
              className="HvEmptyState-titleContainer"
              classes={
                Object {
                  "3xlTitle": "HvTypography-3xlTitle",
                  "4xlTitle": "HvTypography-4xlTitle",
                  "5xlTitle": "HvTypography-5xlTitle",
                  "disabledText": "HvTypography-disabledText",
                  "highlightText": "HvTypography-highlightText",
                  "lTitle": "HvTypography-lTitle",
                  "link": "HvTypography-link",
                  "mTitle": "HvTypography-mTitle",
                  "noWrap": "HvTypography-noWrap",
                  "normalText": "HvTypography-normalText",
                  "placeholderText": "HvTypography-placeholderText",
                  "root": "HvTypography-root",
                  "sTitle": "HvTypography-sTitle",
                  "sectionTitle": "HvTypography-sectionTitle",
                  "selectedNavText": "HvTypography-selectedNavText",
                  "vizText": "HvTypography-vizText",
                  "vizTextDisabled": "HvTypography-vizTextDisabled",
                  "xlTitle": "HvTypography-xlTitle",
                  "xsInlineLink": "HvTypography-xsInlineLink",
                  "xsTitle": "HvTypography-xsTitle",
                  "xxlTitle": "HvTypography-xxlTitle",
                  "xxsTitle": "HvTypography-xxsTitle",
                }
              }
              component="div"
              variant="xxsTitle"
            >
              <div
                className="HvEmptyState-titleContainer HvTypography-root HvTypography-xxsTitle"
              >
                <MockTitle>
                  <div>
                    mockTitle
                  </div>
                </MockTitle>
              </div>
            </ForwardRef>
          </WithStyles(ForwardRef)>
          <WithStyles(ForwardRef)
            className="HvEmptyState-messageContainer"
            component="div"
            variant="normalText"
          >
            <ForwardRef
              className="HvEmptyState-messageContainer"
              classes={
                Object {
                  "3xlTitle": "HvTypography-3xlTitle",
                  "4xlTitle": "HvTypography-4xlTitle",
                  "5xlTitle": "HvTypography-5xlTitle",
                  "disabledText": "HvTypography-disabledText",
                  "highlightText": "HvTypography-highlightText",
                  "lTitle": "HvTypography-lTitle",
                  "link": "HvTypography-link",
                  "mTitle": "HvTypography-mTitle",
                  "noWrap": "HvTypography-noWrap",
                  "normalText": "HvTypography-normalText",
                  "placeholderText": "HvTypography-placeholderText",
                  "root": "HvTypography-root",
                  "sTitle": "HvTypography-sTitle",
                  "sectionTitle": "HvTypography-sectionTitle",
                  "selectedNavText": "HvTypography-selectedNavText",
                  "vizText": "HvTypography-vizText",
                  "vizTextDisabled": "HvTypography-vizTextDisabled",
                  "xlTitle": "HvTypography-xlTitle",
                  "xsInlineLink": "HvTypography-xsInlineLink",
                  "xsTitle": "HvTypography-xsTitle",
                  "xxlTitle": "HvTypography-xxlTitle",
                  "xxsTitle": "HvTypography-xxsTitle",
                }
              }
              component="div"
              variant="normalText"
            >
              <div
                className="HvEmptyState-messageContainer HvTypography-root HvTypography-normalText"
              >
                <MockMessage>
                  <div>
                    mockMessage
                  </div>
                </MockMessage>
              </div>
            </ForwardRef>
          </WithStyles(ForwardRef)>
          <WithStyles(ForwardRef)
            className="HvEmptyState-actionContainer"
            component="div"
            variant="normalText"
          >
            <ForwardRef
              className="HvEmptyState-actionContainer"
              classes={
                Object {
                  "3xlTitle": "HvTypography-3xlTitle",
                  "4xlTitle": "HvTypography-4xlTitle",
                  "5xlTitle": "HvTypography-5xlTitle",
                  "disabledText": "HvTypography-disabledText",
                  "highlightText": "HvTypography-highlightText",
                  "lTitle": "HvTypography-lTitle",
                  "link": "HvTypography-link",
                  "mTitle": "HvTypography-mTitle",
                  "noWrap": "HvTypography-noWrap",
                  "normalText": "HvTypography-normalText",
                  "placeholderText": "HvTypography-placeholderText",
                  "root": "HvTypography-root",
                  "sTitle": "HvTypography-sTitle",
                  "sectionTitle": "HvTypography-sectionTitle",
                  "selectedNavText": "HvTypography-selectedNavText",
                  "vizText": "HvTypography-vizText",
                  "vizTextDisabled": "HvTypography-vizTextDisabled",
                  "xlTitle": "HvTypography-xlTitle",
                  "xsInlineLink": "HvTypography-xsInlineLink",
                  "xsTitle": "HvTypography-xsTitle",
                  "xxlTitle": "HvTypography-xxlTitle",
                  "xxsTitle": "HvTypography-xxsTitle",
                }
              }
              component="div"
              variant="normalText"
            >
              <div
                className="HvEmptyState-actionContainer HvTypography-root HvTypography-normalText"
              >
                <MockAction>
                  <div>
                    mockAction
                  </div>
                </MockAction>
              </div>
            </ForwardRef>
          </WithStyles(ForwardRef)>
        </div>
      </div>
    </div>
  </EmptyState>
</WithStyles(EmptyState)>
`;

exports[`<HvEmptyState /> with String title/message should render correctly 1`] = `
<WithStyles(EmptyState)
  action={
    <WithStyles(ForwardRef)
      component="div"
    >
      <div>
        Here are some helpful links instead:
      </div>
      <WithStyles(HvLink)
        route="/"
      >
        Online Help
      </WithStyles(HvLink)>
    </WithStyles(ForwardRef)>
  }
  icon={
    <Ghost
      role="presentation"
    />
  }
  id="empty-state-custom-message"
  message={
    <WithStyles(ForwardRef)>
      404 Not Found
    </WithStyles(ForwardRef)>
  }
  title="This page can't be displayed"
>
  <EmptyState
    action={
      <WithStyles(ForwardRef)
        component="div"
      >
        <div>
          Here are some helpful links instead:
        </div>
        <WithStyles(HvLink)
          route="/"
        >
          Online Help
        </WithStyles(HvLink)>
      </WithStyles(ForwardRef)>
    }
    classes={
      Object {
        "actionContainer": "HvEmptyState-actionContainer",
        "container": "HvEmptyState-container",
        "containerMessageOnly": "HvEmptyState-containerMessageOnly",
        "iconContainer": "HvEmptyState-iconContainer",
        "messageContainer": "HvEmptyState-messageContainer",
        "root": "HvEmptyState-root",
        "textContainer": "HvEmptyState-textContainer",
        "titleContainer": "HvEmptyState-titleContainer",
      }
    }
    icon={
      <Ghost
        role="presentation"
      />
    }
    id="empty-state-custom-message"
    message={
      <WithStyles(ForwardRef)>
        404 Not Found
      </WithStyles(ForwardRef)>
    }
    title="This page can't be displayed"
  >
    <div
      className="HvEmptyState-root"
      id="empty-state-custom-message"
    >
      <div
        className="HvEmptyState-container"
      >
        <div
          className="HvEmptyState-iconContainer"
        >
          <Ghost
            role="presentation"
          >
            <HvIconBase
              iconSize="S"
              name="Ghost"
              role="presentation"
            >
              <div
                className="HvIconBase-root HvIconBase-s"
                name="Ghost"
                role="presentation"
              >
                <svg
                  focusable={false}
                  height={16}
                  viewBox="0 0 16 16"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    className="color0"
                    d="M8 1a4.951 4.951 0 00-5 4.90151Q2.99951 5.95075 3 6v7.6l.3-.3.7-.7.7.7L6 14.6l1.3-1.3.7-.7.7.7 1.3 1.3 1.3-1.3.7-.7.7.7.3.3V6a4.951 4.951 0 00-4.90151-5Q8.04924.9995 8 1m0-1a6.018 6.018 0 016 6v10l-2-2-2 2-2-2-2 2-2-2-2 2V6a6.018 6.018 0 016-6zm1 6h2v2H9zM5 6h2v2H5z"
                    fill="#414141"
                  />
                </svg>
              </div>
            </HvIconBase>
          </Ghost>
        </div>
        <div
          className="HvEmptyState-textContainer"
        >
          <WithStyles(ForwardRef)
            className="HvEmptyState-titleContainer"
            component="div"
            variant="xxsTitle"
          >
            <ForwardRef
              className="HvEmptyState-titleContainer"
              classes={
                Object {
                  "3xlTitle": "HvTypography-3xlTitle",
                  "4xlTitle": "HvTypography-4xlTitle",
                  "5xlTitle": "HvTypography-5xlTitle",
                  "disabledText": "HvTypography-disabledText",
                  "highlightText": "HvTypography-highlightText",
                  "lTitle": "HvTypography-lTitle",
                  "link": "HvTypography-link",
                  "mTitle": "HvTypography-mTitle",
                  "noWrap": "HvTypography-noWrap",
                  "normalText": "HvTypography-normalText",
                  "placeholderText": "HvTypography-placeholderText",
                  "root": "HvTypography-root",
                  "sTitle": "HvTypography-sTitle",
                  "sectionTitle": "HvTypography-sectionTitle",
                  "selectedNavText": "HvTypography-selectedNavText",
                  "vizText": "HvTypography-vizText",
                  "vizTextDisabled": "HvTypography-vizTextDisabled",
                  "xlTitle": "HvTypography-xlTitle",
                  "xsInlineLink": "HvTypography-xsInlineLink",
                  "xsTitle": "HvTypography-xsTitle",
                  "xxlTitle": "HvTypography-xxlTitle",
                  "xxsTitle": "HvTypography-xxsTitle",
                }
              }
              component="div"
              variant="xxsTitle"
            >
              <div
                className="HvEmptyState-titleContainer HvTypography-root HvTypography-xxsTitle"
              >
                This page can't be displayed
              </div>
            </ForwardRef>
          </WithStyles(ForwardRef)>
          <WithStyles(ForwardRef)
            className="HvEmptyState-messageContainer"
            component="div"
            variant="normalText"
          >
            <ForwardRef
              className="HvEmptyState-messageContainer"
              classes={
                Object {
                  "3xlTitle": "HvTypography-3xlTitle",
                  "4xlTitle": "HvTypography-4xlTitle",
                  "5xlTitle": "HvTypography-5xlTitle",
                  "disabledText": "HvTypography-disabledText",
                  "highlightText": "HvTypography-highlightText",
                  "lTitle": "HvTypography-lTitle",
                  "link": "HvTypography-link",
                  "mTitle": "HvTypography-mTitle",
                  "noWrap": "HvTypography-noWrap",
                  "normalText": "HvTypography-normalText",
                  "placeholderText": "HvTypography-placeholderText",
                  "root": "HvTypography-root",
                  "sTitle": "HvTypography-sTitle",
                  "sectionTitle": "HvTypography-sectionTitle",
                  "selectedNavText": "HvTypography-selectedNavText",
                  "vizText": "HvTypography-vizText",
                  "vizTextDisabled": "HvTypography-vizTextDisabled",
                  "xlTitle": "HvTypography-xlTitle",
                  "xsInlineLink": "HvTypography-xsInlineLink",
                  "xsTitle": "HvTypography-xsTitle",
                  "xxlTitle": "HvTypography-xxlTitle",
                  "xxsTitle": "HvTypography-xxsTitle",
                }
              }
              component="div"
              variant="normalText"
            >
              <div
                className="HvEmptyState-messageContainer HvTypography-root HvTypography-normalText"
              >
                <WithStyles(ForwardRef)>
                  <ForwardRef
                    classes={
                      Object {
                        "3xlTitle": "HvTypography-3xlTitle",
                        "4xlTitle": "HvTypography-4xlTitle",
                        "5xlTitle": "HvTypography-5xlTitle",
                        "disabledText": "HvTypography-disabledText",
                        "highlightText": "HvTypography-highlightText",
                        "lTitle": "HvTypography-lTitle",
                        "link": "HvTypography-link",
                        "mTitle": "HvTypography-mTitle",
                        "noWrap": "HvTypography-noWrap",
                        "normalText": "HvTypography-normalText",
                        "placeholderText": "HvTypography-placeholderText",
                        "root": "HvTypography-root",
                        "sTitle": "HvTypography-sTitle",
                        "sectionTitle": "HvTypography-sectionTitle",
                        "selectedNavText": "HvTypography-selectedNavText",
                        "vizText": "HvTypography-vizText",
                        "vizTextDisabled": "HvTypography-vizTextDisabled",
                        "xlTitle": "HvTypography-xlTitle",
                        "xsInlineLink": "HvTypography-xsInlineLink",
                        "xsTitle": "HvTypography-xsTitle",
                        "xxlTitle": "HvTypography-xxlTitle",
                        "xxsTitle": "HvTypography-xxsTitle",
                      }
                    }
                  >
                    <p
                      className="HvTypography-root HvTypography-normalText"
                    >
                      404 Not Found
                    </p>
                  </ForwardRef>
                </WithStyles(ForwardRef)>
              </div>
            </ForwardRef>
          </WithStyles(ForwardRef)>
          <WithStyles(ForwardRef)
            className="HvEmptyState-actionContainer"
            component="div"
            variant="normalText"
          >
            <ForwardRef
              className="HvEmptyState-actionContainer"
              classes={
                Object {
                  "3xlTitle": "HvTypography-3xlTitle",
                  "4xlTitle": "HvTypography-4xlTitle",
                  "5xlTitle": "HvTypography-5xlTitle",
                  "disabledText": "HvTypography-disabledText",
                  "highlightText": "HvTypography-highlightText",
                  "lTitle": "HvTypography-lTitle",
                  "link": "HvTypography-link",
                  "mTitle": "HvTypography-mTitle",
                  "noWrap": "HvTypography-noWrap",
                  "normalText": "HvTypography-normalText",
                  "placeholderText": "HvTypography-placeholderText",
                  "root": "HvTypography-root",
                  "sTitle": "HvTypography-sTitle",
                  "sectionTitle": "HvTypography-sectionTitle",
                  "selectedNavText": "HvTypography-selectedNavText",
                  "vizText": "HvTypography-vizText",
                  "vizTextDisabled": "HvTypography-vizTextDisabled",
                  "xlTitle": "HvTypography-xlTitle",
                  "xsInlineLink": "HvTypography-xsInlineLink",
                  "xsTitle": "HvTypography-xsTitle",
                  "xxlTitle": "HvTypography-xxlTitle",
                  "xxsTitle": "HvTypography-xxsTitle",
                }
              }
              component="div"
              variant="normalText"
            >
              <div
                className="HvEmptyState-actionContainer HvTypography-root HvTypography-normalText"
              >
                <WithStyles(ForwardRef)
                  component="div"
                >
                  <ForwardRef
                    classes={
                      Object {
                        "3xlTitle": "HvTypography-3xlTitle",
                        "4xlTitle": "HvTypography-4xlTitle",
                        "5xlTitle": "HvTypography-5xlTitle",
                        "disabledText": "HvTypography-disabledText",
                        "highlightText": "HvTypography-highlightText",
                        "lTitle": "HvTypography-lTitle",
                        "link": "HvTypography-link",
                        "mTitle": "HvTypography-mTitle",
                        "noWrap": "HvTypography-noWrap",
                        "normalText": "HvTypography-normalText",
                        "placeholderText": "HvTypography-placeholderText",
                        "root": "HvTypography-root",
                        "sTitle": "HvTypography-sTitle",
                        "sectionTitle": "HvTypography-sectionTitle",
                        "selectedNavText": "HvTypography-selectedNavText",
                        "vizText": "HvTypography-vizText",
                        "vizTextDisabled": "HvTypography-vizTextDisabled",
                        "xlTitle": "HvTypography-xlTitle",
                        "xsInlineLink": "HvTypography-xsInlineLink",
                        "xsTitle": "HvTypography-xsTitle",
                        "xxlTitle": "HvTypography-xxlTitle",
                        "xxsTitle": "HvTypography-xxsTitle",
                      }
                    }
                    component="div"
                  >
                    <div
                      className="HvTypography-root HvTypography-normalText"
                    >
                      <div>
                        Here are some helpful links instead:
                      </div>
                      <WithStyles(HvLink)
                        route="/"
                      >
                        <HvLink
                          classes={
                            Object {
                              "a": "HvLink-a",
                            }
                          }
                          route="/"
                        >
                          <a
                            className="HvLink-a"
                            href="/"
                          >
                            Online Help
                          </a>
                        </HvLink>
                      </WithStyles(HvLink)>
                    </div>
                  </ForwardRef>
                </WithStyles(ForwardRef)>
              </div>
            </ForwardRef>
          </WithStyles(ForwardRef)>
        </div>
      </div>
    </div>
  </EmptyState>
</WithStyles(EmptyState)>
`;
